--- a/contatos.css
+++ b/contatos.css
@@ -178,7 +178,7 @@ width: 100%;
 
  /* A estilização das parágrafos */
  .section-2 p{
-    font-size: 15px;
+    font-size: 1.5rem;
     color: white;
     margin-top: 20px;
    
