--- a/style.css
+++ b/style.css
@@ -57,6 +57,73 @@ body{
   width: 100%;
 }
 
+/* Menu Mobile */
+
+.btn-abrir-menu i{
+  color: var(--cream);
+  font-size: 35px;
+}
+
+.mobile-menu {
+  cursor: pointer;
+  background-color: var(--purples);
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 999999;
+  width: 50%;
+  overflow: hidden;
+}
+
+.mobile-menu .btn-fechar {
+  padding: 22px 4%;
+}
+
+.mobile-menu .btn-fechar i {
+  color: var(--cream);
+  font-size: 30px;
+}
+
+.mobile-menu nav ul li {
+  text-align: right;
+}
+
+.mobile-menu nav ul li a {
+  color: var(--white);
+  font-size: 20px;
+  font-weight: 300;
+  padding: 20px 8%;
+  display: block;
+}
+
+.mobile-menu nav ul li a:hover {
+  background-color: var(--purple);
+  border-radius: 15px;
+}
+
+.overlay-menu {
+  background-color: var(--black);
+  width: 100%;
+  height: 100%;
+  opacity: 15%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 888888;
+}
+
+
+
+@media (max-width: 420px) {
+  body {
+    overflow-x: hidden;
+  }
+
+}
+
+/* Fim do Mobile Menu */
+
 .image-header img{
   width: 80px;
 }
