--- a/cursos.css
+++ b/cursos.css
@@ -1,120 +1,103 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
 /* Fonte */
-* {
-    /* Definições fixas do site */
-    padding: 0;
-    /* Zerando o padding */
-    margin: 0;
-    /*  Zerando a margem */
-    box-sizing: border-box;
-    /* Pra página não quebrar */
-    list-style: none;
-    /* Tirando o estilo das listas */
-    text-decoration: none;
-    /* Tirando o sub-linhado */
-    font-family: Poppins;
-    /* Fonte da página */
+
+:root{
+  --bluew: #91D7F2;
+  --cream: #F2F0EB;
+  --white: #F2F2F2;
+  --gray: #2F3240;
+  --grayb: #1d1d1d;
+  --black: #0D0D0D;
+  --purple: #987cff;
+  --purples: #643DF2;
+  --red: #F20519;
+  --yellow: #F2CB05;
+  --green: #55D976;
+  --greenb: #027313;
+}
+/* Paleta de cores */
+
+*{
+  margin: 0;
+  padding: 0;
+  font-family: Poppins;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+/* Resetando a página */
+body{
+   background-color: #0D0D0D;
+/* Cor de fundo da página */
 }
 
-body {
-    background-color: #0D0D0D;
-    /* Cor de fundo da página */
-}
-
-html {
-    /* Definições na raiz do html */
+html{
+/* Definições na raiz do html */
     width: 100%;
-    /* Para ocupar 100% da largura */
+/* Para ocupar 100% da largura */
     height: 100vh;
-    /*  100vh para que a página tenha a mesma altura do navegador */
+/*  100vh para que a página tenha a mesma altura do navegador */
 }
 
 
 /* INÍCIO DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
-header {
-    padding: min(4vh, 8rem);
-    /*  Tamanho do cabeçalho */
+header{
+    padding: min(2vh, 4rem);
+/*  Tamanho do cabeçalho */
     background-color: #0D0D0D;
-    /* Cor de fundo */
+/* Cor de fundo */
     display: flex;
-    /* Tornando Flex */
+/* Tornando Flex */
     justify-content: space-between;
-    /*  Justificando o conteúdo */
+/*  Justificando o conteúdo */
     align-items: center;
-    /* Alinhando itens ao centro */
+/* Alinhando itens ao centro */
     text-align: center;
-    /* Alinhando os textos ao centro */
+/* Alinhando os textos ao centro */
     position: sticky;
-    /* Fixando o cabeçalho ao rolar a página */
-    top: 0;
-    /* Zerando a parte de cima */
-    left: 0;
-    /* Zerando a esquerda (Que é por onde o elemento aparece) */
-    z-index: 999;
-    /*  Dando prioridade */
-    width: 100%;
-    /* Pra ocupar 100% do espaço */
-    overflow: hidden;
-    /* */
+/* Fixando o cabeçalho ao rolar a página */
+top: 0;
+/* Zerando a parte de cima */
+left: 0;
+/* Zerando a esquerda (Que é por onde o elemento aparece) */
+z-index: 999;
+/*  Dando prioridade */
+width: 100%;
+/* Pra ocupar 100% do espaço */
+overflow: hidden; /* */
+box-shadow: 0px 2px 2px rgb(255, 255, 255);
+font-size: 1.3rem;
 }
 
-header img {
-    /* Estilização da logo */
+header img{
+/* Estilização da logo */
     width: 5rem;
-    /* Tamanho */
+/* Tamanho */
     display: flex;
     /* Tornando Flex */
     align-items: center;
-    /* Alinhando item a centro */
+/* Alinhando item a centro */
     justify-content: center;
     /*  Justificando o conteúdo */
 }
 
-header a {
+header a{
     margin-right: 2vh;
-    /*  Espaçento na esquerda */
+/*  Espaçento na esquerda */
     color: #F2F2F2;
-    /*  Cor do texto */
+/*  Cor do texto */
     font-weight: 800;
     /* Peso da fonte */
 
 }
 
-header a:hover {
+header a:hover{
     border-bottom: 2.5px solid#643DF2;
     /* Criando uma borda sólida com cor */
     transition: 0.1s;
-    /* Tempo de transição */
+/* Tempo de transição */
 }
 
-/* Estilização do boneco de login */
-.login {
-    width: 2rem;
-    /* Largura da caixa */
-    height: 2rem;
-    /* Altura da caixa*/
-    background-color: black;
-    /* Cor de fundo da caixa */
-    border-radius: 50%;
-    /*  Arredondamento do container */
-    border: solid 2px #F2F0EB;
-    display: flex;
-    /* Tornando Flex */
-    align-items: center;
-    /* Alinhando item a centro */
-    justify-content: center;
-    /*  Justificando o conteúdo */
-    padding: 20px;
-    /* Respiro */
-}
-
-.login:hover {
-    /* Hover para mudarmos algo ao passar o mouse por cima */
-    background-color: #F2F0EB;
-    transition: 0.8s;
-    cursor: pointer;
-}
 
 header i {
     font-size: 1.5rem;
@@ -124,9 +107,33 @@ header i {
 }
 
 
+/* Menu Mobile */
+
+.mobile-menu-icon button{
+    background-color: var(--grayb);
+    border: none;
+    padding: 7px;
+    color: var(--white);
+    border-radius: 8px;
+  }
+  
+  .mobile-menu-icon i {
+    font-size: 16px;
+  }
+  
+  .mobile-menu-icon {
+    display: none;
+  }
+  
+  .mobile-menu {
+    display: none;
+  }
+  
+  /* Fim do Mobile Menu */
+  
+
+
 /* FIM DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
-
-
 
 /*COMEÇO DA ESTILIZAÇÃO DO NOSSO CONTEÚDO*/
 .imagem-cabecalho img {
