--- a/home.css
+++ b/home.css
@@ -37,6 +37,7 @@ html{
 /* Para ocupar 100% da largura */
     height: 100vh;
 /*  100vh para que a página tenha a mesma altura do navegador */
+overflow-x: hidden;
 }
 
 
@@ -106,31 +107,6 @@ header i {
     /* Cor do texto */
 }
 
-
-/* Menu Mobile */
-
-.mobile-menu-icon button{
-    background-color: var(--grayb);
-    border: none;
-    padding: 7px;
-    color: var(--white);
-    border-radius: 8px;
-  }
-  
-  .mobile-menu-icon i {
-    font-size: 16px;
-  }
-  
-  .mobile-menu-icon {
-    display: none;
-  }
-  
-  .mobile-menu {
-    display: none;
-  }
-  
-  /* Fim do Mobile Menu */
-  
 
 
 /* FIM DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
@@ -381,6 +357,8 @@ footer {
     width: 100%;
     /* Preencher 100% do tamanho */
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -439,15 +417,14 @@ footer ul li:hover {
 
 
 footer img {
-    margin-left: 7rem;
     width: 10rem;
-    height: auto;
     display: flex;
     /* Tornando Flex */
     align-items: center;
     /* Alinhando item a centro */
     justify-content: center;
     /*  Justificando o conteúdo */
+    text-align: center;
 
 }
 
@@ -468,14 +445,21 @@ footer img {
         text-align: center;
         font-size: 1.5rem;
         gap: 30px;
+        width: 100%;
+        box-sizing: border-box;
     }
 
+
+
+    
+
     .section1{
-        padding: 12rem;
+        padding: 8rem;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
+        width: 100%;
     }
 
     .container-carrossel{
@@ -518,7 +502,7 @@ width: 23rem;
 
 
     .section3{
-        padding: 10rem;
+        padding: 8rem;
         
     }
 
@@ -546,8 +530,29 @@ flex-wrap: wrap;
     footer{
         padding: 4rem;
         display: flex;
-        flex-wrap: wrap;
+  flex-direction: column;
         align-items: center;
         justify-content: center;
-    }
+}
+
+
+footer .páginas {
+    display: none;
+}
+
+
+.container-footer{
+display: flex;
+align-items: center;
+justify-content: center;
+flex-wrap: wrap;
+}
+
+
+footer img{
+    width: 8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 }
