--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ html{
   width: 100%;
   height: 100vh;
   font-size: 17.5px;  
+  overflow-x: hidden;
 }
 /* Usando 100% de cada área do site */
 
@@ -315,17 +316,17 @@ span{
   width: 450px;
 }
 
-/* INÍCIO DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
-footer{
-  padding: min(6vh, 3rem);
-/*  Tamanho */
-  background-color: #F2F0EB;
-/* Cor de fundo */
-width: 100%;
-/* Preencher 100% do tamanho */
-display: flex;
+footer {
+    padding: min(3vh, 3rem);
+    /*  Tamanho */
+    background-color: #F2F0EB;
+    /* Cor de fundo */
+    width: 100%;
+    /* Preencher 100% do tamanho */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
 
 footer i{
   margin-top: 5px;
@@ -344,9 +345,16 @@ footer i span{
 .container-footer{
 display: flex;
 /* Tornando flex (deixando os itens na vertical) */
+align-items: center;
+justify-content: center;
 gap: 50px;
 /*  Espaçamento entre os itens */
 }
+
+.img{
+width: 10rem;
+}
+
 
 .itens-footer1{
   display: flex;
