--- a/cursos.css
+++ b/cursos.css
@@ -246,7 +246,7 @@ header i {
     align-items: center;
     justify-content: center;
     font-size: 4rem;
-    color: #2b04bb;
+    color: #5b2efa;
     margin-bottom: 3rem;
 }
 /* Centraliza, destaca com cor azul e tamanho grande, e adiciona espaçamento inferior */
@@ -266,7 +266,7 @@ header i {
     justify-content: center;
     text-align: center;
     font-size: 3rem;
-    color: #2b04bb;
+    color: #5b2efa;
 }
 /* Centraliza, aplica cor azul e destaca com tamanho maior */
 
