--- a/home.css
+++ b/home.css
@@ -1,102 +1,105 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* Fonte */
 
-:root{
-  --bluew: #91D7F2;
-  --cream: #F2F0EB;
-  --white: #F2F2F2;
-  --gray: #2F3240;
-  --grayb: #1d1d1d;
-  --black: #0D0D0D;
-  --purple: #987cff;
-  --purples: #643DF2;
-  --red: #F20519;
-  --yellow: #F2CB05;
-  --green: #55D976;
-  --greenb: #027313;
+:root {
+    --bluew: #91D7F2;
+    --cream: #F2F0EB;
+    --white: #F2F2F2;
+    --gray: #2F3240;
+    --grayb: #1d1d1d;
+    --black: #0D0D0D;
+    --purple: #987cff;
+    --purples: #643DF2;
+    --red: #F20519;
+    --yellow: #F2CB05;
+    --green: #55D976;
+    --greenb: #027313;
 }
+
 /* Paleta de cores */
 
-*{
-  margin: 0;
-  padding: 0;
-  font-family: Poppins;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-}
-/* Resetando a página */
-body{
-   background-color: #0D0D0D;
-/* Cor de fundo da página */
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Poppins;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
-html{
-/* Definições na raiz do html */
+/* Resetando a página */
+body {
+    background-color: #0D0D0D;
+    /* Cor de fundo da página */
+}
+
+html {
+    /* Definições na raiz do html */
     width: 100%;
-/* Para ocupar 100% da largura */
+    /* Para ocupar 100% da largura */
     height: 100vh;
-/*  100vh para que a página tenha a mesma altura do navegador */
-overflow-x: hidden;
+    /*  100vh para que a página tenha a mesma altura do navegador */
+    overflow-x: hidden;
 }
 
 
 /* INÍCIO DA ESTILIZAÇÃO DO NOSSO CABEÇALHO */
-header{
+header {
     padding: min(2vh, 4rem);
-/*  Tamanho do cabeçalho */
+    /*  Tamanho do cabeçalho */
     background-color: #0D0D0D;
-/* Cor de fundo */
+    /* Cor de fundo */
     display: flex;
-/* Tornando Flex */
+    /* Tornando Flex */
     justify-content: space-between;
-/*  Justificando o conteúdo */
+    /*  Justificando o conteúdo */
     align-items: center;
-/* Alinhando itens ao centro */
+    /* Alinhando itens ao centro */
     text-align: center;
-/* Alinhando os textos ao centro */
+    /* Alinhando os textos ao centro */
     position: sticky;
-/* Fixando o cabeçalho ao rolar a página */
-top: 0;
-/* Zerando a parte de cima */
-left: 0;
-/* Zerando a esquerda (Que é por onde o elemento aparece) */
-z-index: 999;
-/*  Dando prioridade */
-width: 100%;
-/* Pra ocupar 100% do espaço */
-overflow: hidden; /* */
-box-shadow: 0px 2px 2px rgb(255, 255, 255);
-font-size: 1.3rem;
+    /* Fixando o cabeçalho ao rolar a página */
+    top: 0;
+    /* Zerando a parte de cima */
+    left: 0;
+    /* Zerando a esquerda (Que é por onde o elemento aparece) */
+    z-index: 999;
+    /*  Dando prioridade */
+    width: 100%;
+    /* Pra ocupar 100% do espaço */
+    overflow: hidden;
+    /* */
+    box-shadow: 0px 2px 2px rgb(255, 255, 255);
+    font-size: 1.3rem;
 }
 
-header img{
-/* Estilização da logo */
+header img {
+    /* Estilização da logo */
     width: 5rem;
-/* Tamanho */
+    /* Tamanho */
     display: flex;
     /* Tornando Flex */
     align-items: center;
-/* Alinhando item a centro */
+    /* Alinhando item a centro */
     justify-content: center;
     /*  Justificando o conteúdo */
 }
 
-header a{
+header a {
     margin-right: 2vh;
-/*  Espaçento na esquerda */
+    /*  Espaçento na esquerda */
     color: #F2F2F2;
-/*  Cor do texto */
+    /*  Cor do texto */
     font-weight: 800;
     /* Peso da fonte */
 
 }
 
-header a:hover{
+header a:hover {
     border-bottom: 2.5px solid#643DF2;
     /* Criando uma borda sólida com cor */
     transition: 0.1s;
-/* Tempo de transição */
+    /* Tempo de transição */
 }
 
 
@@ -201,7 +204,9 @@ img {
     margin-bottom: 30px;
     /*  Espaçamento na parte de baixo */
     text-align: center;
+    /*alinha no centro*/
     display: flex;
+    /*deixa flex*/
 }
 
 .h1-button p {
@@ -253,6 +258,7 @@ img {
 /* Estilização da imagem */
 .img-section2 {
     width: 250rem;
+    /*largura*/
     height: auto;
     /* Tamanho da imagem */
 }
@@ -341,11 +347,14 @@ img {
     /* Tamanho da imagem */
 }
 
-.section3 span{
+.section3 span {
     color: #643DF2;
+    /*cor texto*/
     margin-left: 5px;
+    /*espasamento esquerda*/
 }
 
+/* Personalização do texto */
 
 
 /* INÍCIO DA ESTILIZAÇÃO DO NOSSO RODAPÉ */
@@ -357,13 +366,17 @@ footer {
     width: 100%;
     /* Preencher 100% do tamanho */
     display: flex;
+    /*deixa flex*/
     align-items: center;
+    /*alinha no centro*/
     justify-content: center;
+    /*justifica no centro*/
 }
 
 
 footer i {
     margin-top: 5px;
+    /*espaçamento topo*/
     color: #0D0D0D;
     /* Cor do texto */
 }
@@ -387,6 +400,7 @@ footer i span {
     display: flex;
     /* Tornando Flex */
     flex-direction: column;
+    /*deixa em colunas*/
     justify-content: center;
     /*  Justificando o conteúdo */
     align-items: center;
@@ -399,6 +413,7 @@ footer i span {
 
 footer ul li {
     color: #0D0D0D;
+    /*cor da letra*/
     font-weight: 800;
     /* Peso da fonte */
     font-size: 1.2rem;
@@ -407,17 +422,21 @@ footer ul li {
 
 footer ul li span {
     color: #643DF2;
+    /*cor letra*/
 }
 
 footer ul li:hover {
     /* Hover para mudarmos algo ao passar o mouse por cima */
     color: #643DF2;
+    /*cor letra*/
     transition: 0.4s;
+    /*tempo transição*/
 }
 
 
 footer img {
     width: 10rem;
+    /*largura*/
     display: flex;
     /* Tornando Flex */
     align-items: center;
@@ -434,35 +453,47 @@ footer img {
 
 
 
-@media (max-width: 830px) {
+@media (max-width: 834px) {
 
 
-    header{
+    header {
         padding: 3rem;
+        /*tamanho da pagina*/
         display: flex;
+        /* Tornando Flex */
         align-items: center;
+        /*deicha os itens centralizado*/
         justify-content: center;
+        /*justifica tudo no centro*/
         text-align: center;
+        /*alinha o texto no centro*/
         font-size: 1.5rem;
+        /*aumenta a fonte do texto*/
         gap: 30px;
+        /*espaçamento geral*/
         width: 100%;
+        /*largura 100%*/
         box-sizing: border-box;
+        /**/
     }
 
 
 
-    
-
-    .section1{
+    .section1 {
         padding: 8rem;
+        /*tamanho da pagina*/
         display: flex;
+        /*torna flex*/
         align-items: center;
+        /*deicha os itens centralizado*/
         justify-content: center;
+        /*alinha o texto no centro*/
         flex-wrap: wrap;
         width: 100%;
+        /*largura 100%*/
     }
 
-    .container-carrossel{
+    .container-carrossel {
         width: 100%;
         /*O container ocupa toda a largura da página*/
         max-width: 100vw;
@@ -472,87 +503,129 @@ footer img {
     }
 
 
-    .section2{
-        padding: 10rem;
-        display: flex;
-        align-items: center;
-
-    }
-
-
-    .container-section2 img{
-width: 23rem;
-
-
-    }
-    .container-section2{
-        display: flex;
-      flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        width: 5rem;
-    }
-
-    .h1-button p{
-        text-align: center;
-        font-size: 1rem;
-    
-    }
-
-
-    .section3{
-        padding: 8rem;
-        
-    }
-
-    .container-section3{
-        display: flex;
-        align-items: center;
-justify-content: center;
-flex-wrap: wrap;
-    }
-
-    .container-section3 img{
-        width: 23rem;
-    }
-
-    .container-section3 .h1-button{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-        
-    
-    
-
-    footer{
+    .section2 {
         padding: 4rem;
+        /*tamanho pagina*/
+        text-align: center;
+        /*alinha o texto no centro*/
+    }
+
+
+    .container-section2 {
         display: flex;
-  flex-direction: column;
-        align-items: center;
+        /*torna o item flex*/
         justify-content: center;
-}
+        /*alinha o texto no centro*/
+        align-items: center;
+        /*deixa centralizado*/
+        flex-wrap: wrap;
+    }
 
 
-footer .páginas {
-    display: none;
-}
+    .section2 img {
+        display: flex;
+        /*deixa flex*/
+        justify-content: center;
+        /*alinha o texto no centro*/
+        align-items: center;
+        /*deixa centralizado*/
+        width: 20rem;
+    }
 
 
-.container-footer{
-display: flex;
-align-items: center;
-justify-content: center;
-flex-wrap: wrap;
-}
+    .section3 {
+        padding: 4rem;
+        /*tamanho da pagina*/
+        text-align: center;
+        /*deixa centralizado*/
+    }
 
 
-footer img{
-    width: 8rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    .container-section3 {
+        display: flex;
+        /*deixa o item flex*/
+        justify-content: center;
+        /*deixa o  texto centralizado*/
+        align-items: center;
+        /*deixa os itens no centro*/
+        flex-wrap: wrap;
+    }
+
+
+    .section3 img {
+        display: flex;
+        /*deixa flex*/
+        justify-content: center;
+        /*deixa o  texto centralizado*/
+        align-items: center;
+        /*deixa os itens no centro*/
+        width: 20rem;
+        /*lagura */
+    }
+
+    .container-section3 .h1-button {
+        display: flex;
+        /*deixa os itens flex*/
+        justify-content: center;
+        /*deixa o  texto centralizado*/
+        align-content: center;
+        /*deixa os itens no centro*/
+        flex-wrap: wrap;
+
+    }
+
+
+    .h1-button h1 {
+        font-size: 2.5rem;
+        /*tamanho do texto*/
+    }
+
+    .h1-button p {
+        font-size: 1.1rem;
+        /*tamanho do texto*/
+    }
+
+    footer .páginas {
+        display: none;
+        /*deixa sem nada*/
+    }
+
+
+    footer {
+        padding: 4rem;
+        /*tamanho pagina*/
+        display: flex;
+        /*deixa flex*/
+        flex-direction: column;
+        /*deixa em colunas*/
+        align-items: center;
+        /*alinha no centro*/
+        justify-content: center;
+        /*deixa o  texto centralizado*/
+    }
+
+
+
+
+    .container-footer {
+        display: flex;
+        /*deixa flex*/
+        align-items: center;
+        /*deixa os itens no centro*/
+        justify-content: center;
+        /*deixa o  texto centralizado*/
+        flex-wrap: wrap;
+    }
+
+
+    .container-footer img {
+        width: 10rem;
+        /*largura*/
+        display: flex;
+        /*deixa flex*/
+        align-items: center;
+        /*alinha no centro*/
+        justify-content: center;
+        /*deixa o  texto centralizado*/
+    }
 }
